--- a/client/src/app/auth/signin/signin.component.html
+++ b/client/src/app/auth/signin/signin.component.html
@@ -1,1 +1,33 @@
-<p>signin works!</p>
+<div class="py-5" fxLayout="column" fxLayoutAlign="center center">
+  <mat-card>
+    <mat-card-title>Connexion</mat-card-title>
+    <mat-card-content>
+      <form
+        [formGroup]="signinForm"
+        fxLayout="column"
+        fxLayoutGap="15px"
+        fxLayoutAlign="center center"
+      >
+        <mat-form-field>
+          <input
+            formControlName="username"
+            matInput
+            type="text"
+            placeholder="Nom"
+          />
+        </mat-form-field>
+        <mat-form-field>
+          <input
+            formControlName="password"
+            matInput
+            type="password"
+            placeholder="mot de passe"
+          />
+        </mat-form-field>
+        <button color="primary" mat-raised-button (click)="trySignin()">
+          Connexion
+        </button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
