--- a/client/src/app/auth/signup/signup.component.html
+++ b/client/src/app/auth/signup/signup.component.html
@@ -1,1 +1,41 @@
-<p>signup works!</p>
+<div class="py-5" fxLayout="column" fxLayoutAlign="center center">
+  <mat-card>
+    <mat-card-title>Inscription</mat-card-title>
+    <mat-card-content>
+      <form
+        [formGroup]="signupForm"
+        fxLayout="column"
+        fxLayoutGap="15px"
+        fxLayoutAlign="center center"
+      >
+        <mat-form-field>
+          <input
+            formControlName="username"
+            matInput
+            type="text"
+            placeholder="Nom"
+          />
+        </mat-form-field>
+        <mat-form-field>
+          <input
+            formControlName="email"
+            matInput
+            type="text"
+            placeholder="email"
+          />
+        </mat-form-field>
+        <mat-form-field>
+          <input
+            formControlName="password"
+            matInput
+            type="password"
+            placeholder="mot de passe"
+          />
+        </mat-form-field>
+        <button color="primary" mat-raised-button (click)="trySignup()">
+          Inscription
+        </button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
