--- a/client/src/app/auth/signup/signup.component.html
+++ b/client/src/app/auth/signup/signup.component.html
@@ -35,6 +35,7 @@
         <button color="primary" mat-raised-button (click)="trySignup()">
           Inscription
         </button>
+        <div *ngIf="error">{{ error }}</div>
       </form>
     </mat-card-content>
   </mat-card>
