--- a/client/src/app/auth/signup/signup.component.html
+++ b/client/src/app/auth/signup/signup.component.html
@@ -32,10 +32,10 @@
             placeholder="mot de passe"
           />
         </mat-form-field>
+        <div style="color: red;" *ngIf="error">{{ error }}</div>
         <button color="primary" mat-raised-button (click)="trySignup()">
           Inscription
         </button>
-        <div *ngIf="error">{{ error }}</div>
       </form>
     </mat-card-content>
   </mat-card>
