--- a/client/src/app/shared/components/topbar/topbar.component.html
+++ b/client/src/app/shared/components/topbar/topbar.component.html
@@ -1,6 +1,21 @@
 <mat-toolbar fxLayoutGap="15px">
   <span class="link" routerLink="/">Mon logo</span>
   <span fxFlex="auto"></span>
-  <span class="link" routerLink="/signin">Connexion</span>
-  <span class="link" routerLink="/signup">Inscription</span>
+  <span
+    *ngIf="!jwtToken.isAuthenticated"
+    fxLayout="row"
+    fxLayoutAlign="center center"
+    fxLayoutGap="20px"
+  >
+    <span class="link" routerLink="/signin">Connexion</span>
+    <span class="link" routerLink="/signup">Inscription</span>
+  </span>
+  <span
+    *ngIf="jwtToken.isAuthenticated"
+    fxLayout="row"
+    fxLayoutAlign="center center"
+    fxLayoutGap="20px"
+  >
+    <span class="link" (click)="logout()">Déconnexion</span>
+  </span>
 </mat-toolbar>
