--- a/client/src/app/auth/signup/signup.component.html
+++ b/client/src/app/auth/signup/signup.component.html
@@ -10,7 +10,7 @@
       >
         <mat-form-field>
           <input
-            formControlName="username"
+            formControlName="name"
             matInput
             type="text"
             placeholder="Nom"
